# EDA

./: .gitignore  pyproject.toml
02_pandas_basic/: 05_data_extraction.ipynb  06_data_generation_and_deletion.ipynb  07_data_type.ipynb  08_data_counting_and_sorting.ipynb  09_calculating_statistics.ipynb
03_pandas_application/: 10_extraction_by_conditions_1.ipynb  11_extraction_by_conditions_2.ipynb  12_extraction_by_conditions_3.ipynb  13_processing_null_values.ipynb  14_processing_duplicate_data.ipynb  15_index_and_column_operations.ipynb  16_binning.ipynb  17_applying_function.ipynb  18_groupby.ipynb  19_pivot_table.ipynb  20_melt.ipynb  21_read_file.ipynb  22_merge.ipynb  23_concat.ipynb  24_handling_of_time_series_data.ipynb
04_visualization/: 29-36_data_preprocessing_in_matplotlib.ipynb  37-41_visualization_with_seaborn.ipynb  42-44_visualization_with_plotly_and_express.ipynb
05_eda/: 46-52_eda.ipynb
