[tool.poetry]
name = "Data Analysis for EDA"
version = "0.1.0"
description = "Data Analysis for EDA"
authors = ["<info@example.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly-express = "^0.4.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"