[tool.poetry]
name = "Data Analysis for EDA"
version = "0.1.0"
description = "Data Analysis for EDA"
authors = ["<info@example.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly-express = "^0.4.1"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"
matplotlib-inline = "^0.1.6"
seaborn = "^0.12.2"
japanize-matplotlib = "^1.1.3"
nbformat = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"